add_library(glue
	../include/glue/AntTweakBar.hpp
	AntTweakBar.cpp

	../include/glue/AnimatedMesh.hpp
	AnimatedMesh.cpp

	../include/glue/ArrayTexture.hpp
	ArrayTexture.cpp

	../include/glue/AxisHelper.hpp
	AxisHelper.cpp

	../include/glue/Bake.hpp
	Bake.cpp

	../include/glue/PrtBaker.hpp
	PrtBaker.cpp

	../include/glue/Constants.hpp

	../include/glue/CameraFrustum.hpp
	CameraFrustum.cpp

	../include/glue/CameraModel.hpp
	CameraModel.cpp

	../include/glue/CubemapProjector.hpp
	CubemapProjector.cpp

	../include/glue/CubemapLookup.hpp
	CubemapLookup.cpp

	../include/glue/CameraFrustum.hpp
	CameraFrustum.cpp

	../include/glue/CubemapRenderer.hpp
	CubemapRenderer.cpp

	../include/glue/CubemapTexture.hpp
	CubemapTexture.cpp

	../include/glue/CubemapViewer.hpp
	CubemapViewer.cpp

	../include/glue/Directories.hpp

	../include/glue/DrawToFramebuffer.hpp
	DrawToFramebuffer.cpp

	../include/glue/Entity.hpp
	Entity.cpp

	../include/glue/Exception.hpp
	Exception.cpp

	../include/glue/Files.hpp
	Files.cpp

	../include/glue/FullScreenQuad.hpp
	FullScreenQuad.cpp

	../include/glue/GLBuffer.hpp
	GLBuffer.cpp

	../include/glue/GLWindow.hpp
	GLWindow.cpp

	../include/glue/KahanVal.hpp
	KahanVal.cpp

	../include/glue/Matrices.hpp
	Matrices.cpp

	../include/glue/Mesh.hpp
	Mesh.cpp

	../include/glue/MessageBox.hpp
	MessageBox.cpp

	../include/glue/ModelLoader.hpp
	ModelLoader.cpp

	../include/glue/NonCopyable.hpp

	../include/glue/PinholeCameraModel.hpp
	PinholeCameraModel.cpp

	../include/glue/PrtCoeffts.hpp
	PrtCoeffts.cpp

	../include/glue/PrtMesh.hpp
	PrtMesh.cpp

	../include/glue/PrtMeshColor.hpp
	PrtMeshColor.cpp

	../include/glue/PrtMeshColorShadowed.hpp
	PrtMeshColorShadowed.cpp

	../include/glue/PrtMeshMono.hpp
	PrtMeshMono.cpp

	../include/glue/PrtMeshMonoShadowed.hpp
	PrtMeshMonoShadowed.cpp

	../include/glue/PrtMeshMonoShadowedLdr.hpp
	PrtMeshMonoShadowedLdr.cpp

	../include/glue/PrtMeshAlbedo.hpp
	PrtMeshAlbedo.cpp

	../include/glue/PrtMeshAlbedoShadowed.hpp
	PrtMeshAlbedoShadowed.cpp

	../include/glue/Raycast.hpp
	Raycast.cpp

	../include/glue/Renderable.hpp
	Renderable.cpp

	../include/glue/RenderDoc.hpp
	RenderDoc.cpp

	../include/glue/RenderToTexture.hpp
	RenderToTexture.cpp

	../include/glue/Scene.hpp
	Scene.cpp

	../include/glue/ShaderProgram.hpp
	ShaderProgram.cpp

	../include/glue/SphericalHarmonics.hpp
	../include/glue/impl/SphericalHarmonics.inl
	SphericalHarmonics.cpp

	../include/glue/SphericalPlot.hpp
	../include/glue/impl/SphericalPlot.inl
	SphericalPlot.cpp

	../include/glue/SurfelCloud.hpp
	SurfelCloud.cpp

	../include/glue/Texture.hpp
	Texture.cpp

	../include/glue/TexturedPhongMesh.hpp
	TexturedPhongMesh.cpp

	../include/glue/VectorTypes.hpp
	VectorTypes.cpp

	../include/glue/EnvMapMesh.hpp
	EnvMapMesh.cpp

	../include/glue/Viewer.hpp
	Viewer.cpp

	../include/glue/RotateViewer.hpp
	RotateViewer.cpp

	../include/glue/FlyViewer.hpp
	FlyViewer.cpp

	../include/glue/ObliqueViewer.hpp
	ObliqueViewer.cpp

	../include/glue/VertexArrayObject.hpp
	VertexArrayObject.cpp

	../include/glue/WaveMesh.hpp
	WaveMesh.cpp
)
